# Bour-Engine

./: .gitignore  .gitmodules  README.md
docs/: init.md  renderer-basics.md
notes/: IMPORTANT.md  core-expectations.md  features.md  refs.md
src/: CMakeLists.txt  main.c
src/controller/: input.c  input.h
src/renderer/: camera.c  camera.h  mesh.c  mesh.h  renderer.c  renderer.h  rendering_engine.c  rendering_engine.h  shaders.c  shaders.h  window.c  window.h
src/renderer/data_types/: lightObject.c  lightObject.h  mesh.c  mesh.h  renderObject.c  renderObject.h  texture.c  texture.h  vectors.c  vectors.h  vertex.c  vertex.h
src/renderer/shaders/: light.frag  light.vert  test.frag  test.vert
src/utils/data_types/: char_array.c  char_array.h
src/utils/helpers/: file_reader.c  file_reader.h
